@@ -6,9 +6,15 @@
     <title>Profile Page</title>
 </head>
 <body>
+    <%- include('common/header'); %>
     <h1>profile page</h1>
     <h2><%= user.name %></h2> 
     <h2><%- user.city %></h2>
     <h2> <%- user.email %></h2>
+    <ul>
+        <% user.skills.forEach((item)=>{%>
+            <li><%- item %></li>
+       <% })%>
+    </ul>
 </body>
 </html>
