@@ -252,7 +252,11 @@ code -------------------------
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+lecrure - 24 dynmic page with ejs
 
+ismai hmnai common header banaya 
+jismai hum kuch bhi commanly use kar sktai
+bus simply yai command use karni h -    <%- include('common/header'); %>
 
 
 
